--- a/src/app/components/tariff-list-view/tariff-list-view.component.html
+++ b/src/app/components/tariff-list-view/tariff-list-view.component.html
@@ -85,17 +85,19 @@
         <td mat-cell *matCellDef="let row">
           <!-- <mat-progress-bar mode="determinate" [value]="row.upSpeed" ></mat-progress-bar> -->
           <section class="progress-section">
-            <mat-progress-bar 
-            *ngIf="showProgressBars"
+            <mat-progress-bar
+              *ngIf="showProgressBars"
               class="up-speed"
-              [color]="'accent'"
+              [color]="'warn'"
               [mode]="'determinate'"
               [value]="row.upSpeed"
               [bufferValue]="100"
             >
             </mat-progress-bar>
-            <div *ngIf="showProgressBars" class="progress-text">{{ row.upSpeed }}Mbps</div>
-            <span *ngIf="!showProgressBars">{{row.upSpeed}}</span>
+            <div *ngIf="showProgressBars" class="progress-text">
+              {{ row.upSpeed }}Mbps
+            </div>
+            <span *ngIf="!showProgressBars">{{ row.upSpeed }}</span>
             <p *ngIf="showProgressBars">{{ region.maxUpSpeedLimit }}</p>
           </section>
         </td>
@@ -109,7 +111,7 @@
         <td mat-cell *matCellDef="let row">
           <section class="progress-section">
             <mat-progress-bar
-            *ngIf="showProgressBars"
+              *ngIf="showProgressBars"
               class="up-speed"
               [color]="'primary'"
               [mode]="'determinate'"
@@ -117,10 +119,35 @@
               [bufferValue]="100"
             >
             </mat-progress-bar>
-            <div *ngIf="showProgressBars" class="progress-text">{{ row.downSpeed }}Mbps</div>
+            <div *ngIf="showProgressBars" class="progress-text">
+              {{ row.downSpeed }}Mbps
+            </div>
             <p *ngIf="showProgressBars">{{ region.maxDownSpeedLimit }}</p>
-            <span *ngIf="!showProgressBars">{{row.downSpeed}}</span>
+            <span *ngIf="!showProgressBars">{{ row.downSpeed }}</span>
           </section>
+        </td>
+      </ng-container>
+
+      <!-- Monthly cancelable Column -->
+      <ng-container matColumnDef="monthlyCancellable">
+        <th mat-header-cell *matHeaderCellDef>Monthly Cancellable</th>
+        <td mat-cell *matCellDef="let row">
+          <mat-icon class="check-success" *ngIf="getMonthlyCancellable(row)"
+            >check_circle</mat-icon
+          >
+          <mat-icon
+            class="check-unavailable"
+            *ngIf="!getMonthlyCancellable(row)"
+            >cancel</mat-icon
+          >
+        </td>
+      </ng-container>
+
+      <!-- Go to tariff Column -->
+      <ng-container matColumnDef="goTariff">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-flat-button class="to-tariff">Go</button>
         </td>
       </ng-container>
 
