--- a/src/app/components/tariff-list-view/tariff-list-view.component.scss
+++ b/src/app/components/tariff-list-view/tariff-list-view.component.scss
@@ -6,6 +6,8 @@ $primary: mat.define-palette(mat.$indigo-palette, 500);
 $accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 $warn: mat.define-palette(mat.$red-palette);
 $app-white: #ffffff;
+$app-green: #008000;
+$app-orange: #ff8c00;
 
 $theme: mat.define-light-theme(
   (
@@ -76,4 +78,17 @@ $theme: mat.define-light-theme(
     padding: 10px;
     color: $app-white;
   }
+}
+
+.check-success {
+  color: $app-green;
+}
+
+.check-unavailable {
+  color: mat.get-color-from-palette($warn, 300);
+}
+
+.to-tariff {
+  background-color: $app-orange;
+  color: $app-white;
 }
